changes in website

--- a/app/assets/stylesheets/customer/style.scss
+++ b/app/assets/stylesheets/customer/style.scss
@@ -634,6 +634,10 @@ p.lead{
     }
   }
 }
+.advertisement_image{
+  width: 100%;
+  margin: 15px 0;
+}
 @media(max-width: 767px){
   .otp-min-height{
     min-height: inherit;
