--- a/app/views/admin/advertisements/show.html.erb
+++ b/app/views/admin/advertisements/show.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm-6">
+  <div class="col-sm-9">
     <%= link_to 'Edit', edit_admin_advertisement_path(@advertisement), class: 'btn btn-primary' %>
     <%= link_to 'Delete', admin_advertisement_path(@advertisement), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'  %>
     <br>
@@ -22,12 +22,12 @@
       <dt>Subcategory</dt><dd><%= @advertisement.subcategory.name %></dd>
     </dl>
   </div>
-  <div class="col-sm-6">
+  <div class="col-sm-3">
     <div class="row">
       <span style="color:red">Note: *Image size must be 1400×700</span>
       <% @advertisement.advertisement_images.each do |advertisement_image| %>
           <div class="col-sm-12">
-            <%= image_tag advertisement_image.image.url(AdvertisementImage::DEFAULT_SIZE) %>
+            <%= image_tag advertisement_image.image.url(AdvertisementImage::DEFAULT_SIZE), class: 'img-responsive' %>
             <% if advertisement_image.id.present? %>
                 <%= link_to admin_advertisement_advertisement_image_path(@advertisement, advertisement_image), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>
                     <i class="fa fa-trash fa-3"></i>
