--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -1,6 +1,5 @@
 <div class="row">
-  <div class="col-sm-8">
+  <div class="col-xs-12">
     <%= render partial: 'form' %>
   </div>
-  <div class="col-sm-4"></div>
 </div>
