--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -10,7 +10,7 @@
     <div class="row">
       <div class="col-xs-12">
         <% if @categories.any? %>
-            <h3 class="widget-title">Categories</h3>
+            <h3 class="widget-title">Sub Categories(<%= @category.subcategories.length %>)</h3>
             <div class="row">
               <% @category.subcategories.each do |subcategory| %>
                   <div class="col-md-4 col-sm-6 col-xs-12">
