--- a/app/views/enquiries/_form.html.erb
+++ b/app/views/enquiries/_form.html.erb
@@ -40,12 +40,12 @@
                 <%= simple_form_for [:product, @enquiry] do |f| %>
                     <div class="col-xs-12">
                       <div class="field-con">
-                        <%= f.input :start_at, label: 'Start Time of Product', label_html: {class: 'label'}, default: @product.start_at, input_html: {class: 'select-field'}  %>
+                        <%= f.input :start_at, label: 'Start Time of Product ⓘ', label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Start Time of Product'}, default: @product.start_at, input_html: {class: 'select-field'}  %>
                       </div>
                     </div>
                     <div class="col-xs-12">
                       <div class="field-con">
-                        <%= f.input :end_at, label: 'End Time of Product', label_html: {class: 'label'}, default: @product.end_at, input_html: {class: 'select-field'}  %>
+                        <%= f.input :end_at, label: 'End Time of Product ⓘ', label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'End Time of Product'}, default: @product.end_at, input_html: {class: 'select-field'}  %>
                       </div>
                     </div>
                     <!--<div class="col-xs-12">-->
@@ -86,22 +86,22 @@
                     <!--</div>-->
                     <div class="col-xs-12">
                       <div class="field-con">
-                        <%= f.input :expected_per_hour_price, label: 'Expected per hour price', label_html: {class: 'label'}, input_html: {class: 'text-field', value: @product.per_hour_price}  %>
+                        <%= f.input :expected_per_hour_price, label: 'Expected per hour price ⓘ', label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Expected per hour price'}, input_html: {class: 'text-field', value: @product.per_hour_price}  %>
                       </div>
                     </div>
                     <div class="col-xs-12">
                       <div class="field-con">
-                        <%= f.input :expected_per_day_price, label: 'Expected per day price', label_html: {class: 'label'}, input_html: {class: 'text-field', value: @product.per_day_price}  %>
+                        <%= f.input :expected_per_day_price, label: 'Expected per day price ⓘ', label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Expected per day price'}, input_html: {class: 'text-field', value: @product.per_day_price}  %>
                       </div>
                     </div>
                     <div class="col-xs-12">
                       <div class="field-con">
-                        <%= f.input :expected_per_week_price, label: 'Expected per week price', label_html: {class: 'label'}, input_html: {class: 'text-field', value: @product.per_week_price}  %>
+                        <%= f.input :expected_per_week_price, label: 'Expected per week price ⓘ', label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Expected per week price'}, input_html: {class: 'text-field', value: @product.per_week_price}  %>
                       </div>
                     </div>
                     <div class="col-xs-12">
                       <div class="field-con">
-                        <%= f.input :expected_per_month_price, label: 'Expected per month price', label_html: {class: 'label'}, input_html: {class: 'text-field', value: @product.per_month_price}  %>
+                        <%= f.input :expected_per_month_price, label: 'Expected per month price ⓘ', label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Expected per month price'}, input_html: {class: 'text-field', value: @product.per_month_price}  %>
                       </div>
                     </div>
 
@@ -114,12 +114,12 @@
                 <%= simple_form_for [:service, @enquiry] do |f| %>
                     <div class="col-xs-12">
                       <div class="field-con">
-                        <%= f.input :start_at, label: 'Start Time of Product', label_html: {class: 'label'}, default: @service.start_at, input_html: {class: 'select-field'}  %>
+                        <%= f.input :start_at, label: 'Start Time of Product ⓘ', label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Start Time of Product'}, default: @service.start_at, input_html: {class: 'select-field'}  %>
                       </div>
                     </div>
                     <div class="col-xs-12">
                       <div class="field-con">
-                        <%= f.input :end_at, label: 'End Time of Product', label_html: {class: 'label'}, default: @service.end_at, input_html: {class: 'select-field'}  %>
+                        <%= f.input :end_at, label: 'End Time of Product ⓘ', label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'End Time of Product'}, default: @service.end_at, input_html: {class: 'select-field'}  %>
                       </div>
                     </div>
                     <!--<div class="col-xs-12">-->
@@ -160,22 +160,22 @@
                     <!--</div>-->
                     <div class="col-xs-12">
                       <div class="field-con">
-                        <%= f.input :expected_per_hour_price, label: 'Expected per hour price', label_html: {class: 'label'}, input_html: {class: 'text-field', value: @service.per_hour_price}  %>
+                        <%= f.input :expected_per_hour_price, label: 'Expected per hour price ⓘ', label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Expected per hour price'}, input_html: {class: 'text-field', value: @service.per_hour_price}  %>
                       </div>
                     </div>
                     <div class="col-xs-12">
                       <div class="field-con">
-                        <%= f.input :expected_per_day_price, label: 'Expected per day price', label_html: {class: 'label'}, input_html: {class: 'text-field', value: @service.per_day_price}  %>
+                        <%= f.input :expected_per_day_price, label: 'Expected per day price ⓘ', label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Expected per day price'}, input_html: {class: 'text-field', value: @service.per_day_price}  %>
                       </div>
                     </div>
                     <div class="col-xs-12">
                       <div class="field-con">
-                        <%= f.input :expected_per_week_price, label: 'Expected per week price', label_html: {class: 'label'}, input_html: {class: 'text-field', value: @service.per_week_price}  %>
+                        <%= f.input :expected_per_week_price, label: 'Expected per week price ⓘ', label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Expected per week price'}, input_html: {class: 'text-field', value: @service.per_week_price}  %>
                       </div>
                     </div>
                     <div class="col-xs-12">
                       <div class="field-con">
-                        <%= f.input :expected_per_month_price, label: 'Expected per month price', label_html: {class: 'label'}, input_html: {class: 'text-field', value: @service.per_month_price}  %>
+                        <%= f.input :expected_per_month_price, label: 'Expected per month price ⓘ', label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Expected per week price'}, input_html: {class: 'text-field', value: @service.per_month_price}  %>
                       </div>
                     </div>
 
@@ -192,3 +192,9 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript" charset="utf-8">
+    $(document).ready(function(){
+        $('[data-toggle="popover"]').tooltip();
+    });
+</script>
