--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -138,38 +138,38 @@
           <% end %>
       <% end %>
 
-      <% if @results[:advertisements].any? %>
-          <h3>Advertisement:</h3>
-          <% @results[:advertisements].each do |advertisement| %>
-              <div class="search_items">
-                <div class="col-md-2 col-sm-3 col-xs-12 text-center">
-                  <% if advertisement.advertisement_images.any? %>
-                      <%= image_tag advertisement.advertisement_images.first.image.url(AdvertisementImage::DEFAULT_SIZE), class: 'img-responsive product-img-primary' %>
-                  <% else %>
-                      <%= image_tag 'theme_img/100x100.png', class: 'img-responsive', alt: '' %>
-                  <% end %>
-                </div>
-                <div class="col-md-10 col-sm-9 col-xs-12">
-                  <div class="row">
-                    <div class="col-sm-8 col-xs-12">
-                      <h5 class="product-name"><%= advertisement.title %></h5>
-                    </div>
-                    <div class="col-sm-4 col-xs-12 text-right">
-                      <p class="category-name">
-                        <a href="<%=category_path(advertisement.subcategory.category)%>"><%=advertisement.subcategory.category.name%></a> >
-                        <a href="<%=subcategory_path(advertisement.subcategory)%>"><%=advertisement.subcategory.name%></a>
-                      </p>
-                    </div>
-                    <div class="col-xs-12">
-                      <p class="description"><%= advertisement.description %></p>
-                      <!--<a class="read-more-link" href="#">View detail</a>-->
-                    </div>
-                  </div>
-                </div>
-                <div class="clearfix"></div>
-              </div>
-          <% end %>
-      <% end %>
+      <%# if @results[:advertisements].any? %>
+          <!--<h3>Advertisement:</h3>-->
+          <!--<%# @results[:advertisements].each do |advertisement| %>-->
+              <!--<div class="search_items">-->
+                <!--<div class="col-md-2 col-sm-3 col-xs-12 text-center">-->
+                  <!--<%# if advertisement.advertisement_images.any? %>-->
+                      <!--<%#= image_tag advertisement.advertisement_images.first.image.url(AdvertisementImage::DEFAULT_SIZE), class: 'img-responsive product-img-primary' %>-->
+                  <!--<%# else %>-->
+                      <!--<%#= image_tag 'theme_img/100x100.png', class: 'img-responsive', alt: '' %>-->
+                  <!--<%# end %>-->
+                <!--</div>-->
+                <!--<div class="col-md-10 col-sm-9 col-xs-12">-->
+                  <!--<div class="row">-->
+                    <!--<div class="col-sm-8 col-xs-12">-->
+                      <!--<h5 class="product-name"><%#= advertisement.title %></h5>-->
+                    <!--</div>-->
+                    <!--<div class="col-sm-4 col-xs-12 text-right">-->
+                      <!--<p class="category-name">-->
+                        <!--<a href="<%#=category_path(advertisement.subcategory.category)%>"><%#=advertisement.subcategory.category.name%></a> >-->
+                        <!--<a href="<%#=subcategory_path(advertisement.subcategory)%>"><%#=advertisement.subcategory.name%></a>-->
+                      <!--</p>-->
+                    <!--</div>-->
+                    <!--<div class="col-xs-12">-->
+                      <!--<p class="description"><%#= advertisement.description %></p>-->
+                      <!--&lt;!&ndash;<a class="read-more-link" href="#">View detail</a>&ndash;&gt;-->
+                    <!--</div>-->
+                  <!--</div>-->
+                <!--</div>-->
+                <!--<div class="clearfix"></div>-->
+              <!--</div>-->
+          <%# end %>
+      <%# end %>
     </div>
 
   </div>
