--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,7 +15,7 @@
 <!--slider start-->
 
 <div class="owl-carousel owl-loaded owl-nav-dots-inner" data-options='{"items":1,"loop":true,"autoplay":true,"autoplayTimeout":5000}'>
-  <% @advertisements.each do |advertisement|%>
+  <% @top_advertisements.each do |advertisement|%>
       <% next unless advertisement.advertisement_images.any? %>
       <a href="<%= advertisement.redirect_link.present? ? "#{advertisement.redirect_link}" : subcategory_path(advertisement.subcategory)%>" <%= advertisement.redirect_link.present? ? " target=_blank" : ''%> >
         <div class="owl-item">
@@ -23,8 +23,8 @@
             <div class="container">
               <div class="slider-item-inner">
                 <div class="slider-item-caption-left">
-                  <h4 class="slider-item-caption-title" style="color:white"><%= advertisement.title %></h4>
-                  <p class="slider-item-caption-desc" style="color:white"><%= advertisement.description %></p>
+                  <!--<h4 class="slider-item-caption-title" style="color:white"><%#= advertisement.title %></h4>-->
+                  <!--<p class="slider-item-caption-desc" style="color:white"><%#= advertisement.description %></p>-->
                   <!--<a class="btn btn-lg btn-ghost btn-black" href="#">Shop Now</a>-->
                 </div>
                 <%#= image_tag 'slider_img/slider-img1.png', class: 'slider-item-img-right', style:'top: 60%; width: 56%;' %>
@@ -220,38 +220,44 @@
           <!--<div class="gap"></div>-->
           <!--Advertisements finish-->
       <%# end %>
-
+      <h3 class="widget-title">Advertisement</h3>
       <div class="row" data-gutter="15">
-        <% @advertisements.each do |advertisement| %>
-            <div class="col-md-6 col-xs-12">
-              <%= image_tag advertisement.advertisement_images.first.image(:size_500x500), class: 'img-responsive' %>
-            </div>
-        <% end %>
-        <div class="col-md-6">
-          <div class="banner" style="background-color:#9C7B60;">
-            <a class="banner-link" href="#"></a>
-            <div class="banner-caption-left">
-              <h5 class="banner-title">New Furniture for new Home</h5>
-              <p class="banner-desc">New Thinking. New Furniture.</p>
-              <p class="banner-shop-now">Shop Now <i class="fa fa-caret-right"></i>
-              </p>
-            </div>
-            <img class="banner-img" src="img/test_banner/5-i.png" alt="Image Alternative text" title="Image Title" style="bottom: -8px; right: 11px; width: 238px;" />
-          </div>
+        <div class="advertisement_image">
+          <% @mid_advertisements.each_with_index do |advertisement, index| %>
+              <% next if index > 1 %>
+              <a href="<%= advertisement.redirect_link.present? ? "#{advertisement.redirect_link}" : subcategory_path(advertisement.subcategory)%>" <%= advertisement.redirect_link.present? ? " target=_blank" : ''%> >
+                <div class="col-sm-6 col-xs-12">
+                  <%#= advertisement.advertisement_images %>
+                  <%= image_tag advertisement.advertisement_images.first.image(:original), class: 'img-responsive' %>
+                </div>
+              </a>
+          <% end %>
+          <div class="clearfix"></div>
         </div>
-        <div class="col-md-6">
-          <div class="banner" style="background-color:#DF643B;">
-            <a class="banner-link" href="#"></a>
-            <div class="banner-caption-left">
-              <h5 class="banner-title">Let's Have a Ride!</h5>
-              <p class="banner-desc">30% Off for Best Selling Bicycles</p>
-              <p class="banner-shop-now">Shop Now <i class="fa fa-caret-right"></i>
-              </p>
-            </div>
-            <img class="banner-img" src="img/test_banner/6-i.png" alt="Image Alternative text" title="Image Title" style="bottom: 0px; right: -20px; width: 326px;" />
-          </div>
+        <div class="advertisement_image">
+          <% @bottom_advertisements.each do |advertisement| %>
+              <a href="<%= advertisement.redirect_link.present? ? "#{advertisement.redirect_link}" : subcategory_path(advertisement.subcategory)%>" <%= advertisement.redirect_link.present? ? " target=_blank" : ''%> >
+                <div class="col-sm-4 col-xs-12">
+                  <%= image_tag advertisement.advertisement_images.first.image(:original), class: 'img-responsive' %>
+                </div>
+              </a>
+          <% end %>
+          <div class="clearfix"></div>
+        </div>
+        <div class="advertisement_image">
+          <% @mid_advertisements.each_with_index do |advertisement, index| %>
+              <% next if index < 2 %>
+              <a href="<%= advertisement.redirect_link.present? ? "#{advertisement.redirect_link}" : subcategory_path(advertisement.subcategory)%>" <%= advertisement.redirect_link.present? ? " target=_blank" : ''%> >
+                <div class="col-sm-6 col-xs-12">
+                  <%#= advertisement.advertisement_images %>
+                  <%= image_tag advertisement.advertisement_images.first.image(:original), class: 'img-responsive' %>
+                </div>
+              </a>
+          <% end %>
+          <div class="clearfix"></div>
         </div>
       </div>
+      <div class="gap"></div>
 
       <% if @services.any? %>
           <h3 class="widget-title">Services</h3>
