--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -33,14 +33,14 @@
                   <!--<i class="fa fa-inr rupee-icon"></i>-->
                   <input type="number" name="rating" class="form-control set-rating">
                 </div>
-                <div class="form-group">
-                  <label>Minimum Product Quantity</label>
+                <!--<div class="form-group">-->
+                  <!--<label>Minimum Product Quantity</label>-->
                   <!--<i class="fa fa-inr rupee-icon"></i>-->
-                  <input type="number" name="quantity" class="form-control set-quantity">
+                  <!--<input type="number" name="quantity" class="form-control set-quantity">-->
                   <%#= check_box("tag", true, {checked: true}) %>
                   <!--<input type="checkbox" name="negotiable" class="set-negotiable" > Negotiable-->
                   <%#= select_tag 'state', options_for_select(state_for_collection), prompt: 'select state', class: 'form-control set-state'%>
-                </div>
+                <!--</div>-->
 
                 <div class="form-group">
                   <label>Category</label>
@@ -61,7 +61,7 @@
                   <%= select_tag "city_id", options_for_select(city_for_collection, params[:city_id]), prompt: "choose city", class: 'form-control set-city filter_city' %>
                 </div>
                 <span class="reset-filter btn btn-primary save-full-btn" style="cursor: pointer; margin-bottom: 10px">Reset</span>
-                <input type="submit" class="btn btn-primary save-full-btn">
+                <input type="submit" class="btn btn-primary save-full-btn" value="Apply Changes">
               </form>
             </div>
             <!--<span class="btn btn-primary filter-evnt"> filter </span>-->
