--- a/app/views/enquiries/_form.html.erb
+++ b/app/views/enquiries/_form.html.erb
@@ -1,30 +1,3 @@
-<%# unless @service.present? %>
-    <%#= simple_form_for [:product, @enquiry] do |f| %>
-        <%#= f.input :start_at, label: 'Start Time of Product', default: @product.start_at  %>
-        <%#= f.input :end_at, label: 'End Time of Product', default: @product.end_at %>
-
-        <!-- Rent: --> <%#= @product.rent %>
-        <!-- Price in rupees: --> <%#= @product.price_in_rupees %>
-
-        <%#= f.input :expected_price %>
-        <%#= f.submit 'Save', class: 'btn btn-default' %>
-    <%# end %>
-
-<%# else %>
-
-    <%#= simple_form_for [:service, @enquiry] do |f| %>
-        <%#= f.input :start_at, label: 'Start Time of Product', default: @service.start_at  %>
-        <%#= f.input :end_at, label: 'End Time of Product', default: @service.end_at %>
-
-        <!-- Rent: --> <%#= @service.rent %>
-        <!-- Price in rupees: --> <%#= @service.price_in_rupees %>
-
-        <%#= f.input :expected_price %>
-        <%#= f.submit 'Save', class: 'btn btn-default' %>
-    <%# end %>
-<%# end %>
-
-
 <div class="content-main-section">
   <div class="container">
     <div class="col-md-offset-1 col-sm-offset-1 col-md-10 col-sm-10 col-xs-12">
@@ -107,7 +80,7 @@
 
                     <div class="clearfix"></div>
                     <div class="submit-main">
-                      <%= f.submit 'Save', class: 'pushbutton-wide s-button btn btn-primary' %>
+                      <%= f.submit 'Enquire', class: 'pushbutton-wide s-button btn btn-primary' %>
                     </div>
                 <% end %>
             <% else %>
