--- a/app/views/layouts/customer_mailer.html.erb
+++ b/app/views/layouts/customer_mailer.html.erb
@@ -261,8 +261,8 @@
       </tr>
       <%= yield %>
       <tr>
-        <td class="full-width-image">
-          <img src="http://s3.amazonaws.com/byebuyingproduction/advertisement_images/images/000/000/038/original/logo.jpeg?1474540580" alt="">
+        <td class="full-width-image" style="text-align: left;">
+          <img src="http://s3.amazonaws.com/byebuyingproduction/advertisement_images/images/000/000/038/original/logo.jpeg?1474540580" style="max-width: 100%;" alt="">
         </td>
       </tr>
     </table>
