--- a/app/views/customer/enquiries/index.html.erb
+++ b/app/views/customer/enquiries/index.html.erb
@@ -22,8 +22,8 @@
                                 </div>
                               </div>
                               <div class="col-md-10 col-sm-9 col-xs-12">
-                                <!--<h2 class="description"><%#= customer_enquiry.is_product ?  customer_enquiry.product.name : customer_enquiry.service.service_description %></h2>-->
-                                <h2 class="heading"><%= customer_enquiry.is_product ? 'Product' : 'Service' %></h2>
+                                <h2 class="heading"><%= customer_enquiry.is_product ?  customer_enquiry.product.name.capitalize : customer_enquiry.service.service_description.capitalize %></h2>
+                                <h2 class="description"><%= customer_enquiry.is_product ? 'Product' : 'Service' %></h2>
                                 <span style="color: #000"><%= customer_enquiry.status %></span>
                                 <h5 class="time-option"><%= customer_enquiry.start_at.strftime(time_format) %> - <%= customer_enquiry.end_at.strftime(time_format) %></h5>
                                 <p class="description"><%= customer_enquiry.description %></p>
@@ -49,8 +49,8 @@
                                 </div>
                               </div>
                               <div class="col-md-10 col-sm-9 col-xs-12">
-                                <!--<h2 class="description"><%#= customer_enquiry.is_product ?  customer_enquiry.product.name : customer_enquiry.service.service_description %></h2>-->
-                                <h2 class="heading"><%= customer_enquiry.is_product ? 'Product' : 'Service' %></h2>
+                                <h2 class="heading"><%= customer_enquiry.is_product ?  customer_enquiry.product.name.capitalize : customer_enquiry.service.service_description.capitalize %></h2>
+                                <h2 class="description"><%= customer_enquiry.is_product ? 'Product' : 'Service' %></h2>
                                 <span style="color: #000"><%= customer_enquiry.status %></span>
                                 <h5 class="time-option"><%= customer_enquiry.start_at.strftime(time_format) %> - <%= customer_enquiry.end_at.strftime(time_format) %></h5>
                                 <p class="description"><%= customer_enquiry.description %></p>
@@ -75,7 +75,7 @@
                                 </div>
                               </div>
                               <div class="col-md-10 col-sm-9 col-xs-12">
-                                <!--<h2 class="description"><%#= customer_enquiry.is_product ?  customer_enquiry.product.name : customer_enquiry.service.service_description %></h2>-->
+                                <h2 class="description"><%= customer_enquiry.is_product ?  customer_enquiry.product.name.capitalize : customer_enquiry.service.service_description.capitalize %></h2>
                                 <h2 class="heading"><%= customer_enquiry.is_product ? 'Product' : 'Service' %></h2>
                                 <span style="color: #000"><%= customer_enquiry.status %></span>
                                 <h5 class="time-option"><%= customer_enquiry.start_at.strftime(time_format) %> - <%= customer_enquiry.end_at.strftime(time_format) %></h5>
