--- a/app/views/customer/products/_form.html.erb
+++ b/app/views/customer/products/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
     <div class="col-xs-12">
       <div class="field-con">
-        <%= f.input :subcategory_id, collection: subcategory_for_collection, prompt: 'Select subcategory', label: 'Product Subcategory ⓘ' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+        <%= f.input :subcategory_id, collection: subcategory_for_collection, prompt: 'Select subcategory', label: 'Product Subcategory' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
       </div>
     </div>
     <div class="col-xs-12">
@@ -115,7 +115,7 @@
     </div>
     <div class="col-xs-12">
       <div class="field-con">
-        <%= f.input :other, label: 'Other ⓘ' ,label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Other'}, input_html: {class: 'text-discription'} %>
+        <%= f.input :other, label: 'Other' ,label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
       </div>
     </div>
 
