--- a/app/views/customer/services/_form.html.erb
+++ b/app/views/customer/services/_form.html.erb
@@ -58,12 +58,12 @@
     </div>
     <div class="col-xs-12">
       <div class="field-con">
-        <%= f.input :city_id, collection: city_for_collection, prompt: 'Select city', label: 'City  ⓘ' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+        <%= f.input :city_id, collection: city_for_collection, prompt: 'Select city', label: 'City' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
       </div>
     </div>
     <div class="col-xs-12">
       <div class="field-con">
-        <%= f.input :location, label: 'Location ⓘ' ,label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
+        <%= f.input :location, label: 'Location' ,label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
       </div>
     </div>
     <!--<div class="col-xs-12">-->
