--- a/app/views/customer/enquiries/show.html.erb
+++ b/app/views/customer/enquiries/show.html.erb
@@ -44,6 +44,18 @@
                 <div class="product-detail">
                   <div class="row">
                     <div class="col-xs-5">
+                      <h4>Product Description:</h4>
+                    </div>
+                    <div class="col-xs-7">
+                      <p><%= @enquiry.product.description %></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xs-12">
+                <div class="product-detail">
+                  <div class="row">
+                    <div class="col-xs-5">
                       <h4>Status:</h4>
                     </div>
                     <div class="col-xs-7">
